# derailed

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
.github/workflows/: cla.yml  issues.yml
api/: README.md  pyproject.toml
api/src/derailed_api/: __init__.py  error.py  meta.py  missing.py
api/src/derailed_api/factors/: __init__.py  channel_factors.py  user_factors.py
api/src/derailed_api/gateway/: __init__.py  gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
api/src/derailed_api/routers/: __init__.py  message.py  user.py
app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
app/src/: index.css  main.tsx
app/src/components/: Channel.tsx  Message.tsx  Sidebar.tsx
app/src/lib/: state.tsx
app/src/routes/: Channel.tsx  Home.tsx  Login.tsx  Register.tsx
app/src/routes/registration/: Login.tsx  Register.tsx
gateway/: README.md  mix.exs  pyproject.toml
gateway/apps/sessions/: mix.exs
gateway/apps/sessions/lib/: session.ex  session_registry.ex
gateway/apps/sessions/test/: sessions_test.exs
gateway/apps/websockets/: mix.exs
gateway/apps/websockets/lib/: state.ex  websocket.ex
gateway/apps/websockets/test/: websockets_test.exs
gateway/src/gateway/: __main__.py  app.py  meta.py  session.py
migrations/: 20231209033322_initial.down.sql  20231209033322_initial.up.sql
mobile/Derailed/: README.md  app.json  package-lock.json  package.json
mobile/Derailed/android/: settings.gradle
mobile/Derailed/android/app/: build.gradle
mobile/Derailed/android/app/src/main/java/com/derailedapp/: MainActivity.kt  MainApplication.kt
mobile/Derailed/ios/: Podfile
mobile/Derailed/ios/Derailed/: AppDelegate.mm  Info.plist
mobile/Derailed/ios/Derailed.xcodeproj/: project.pbxproj
shared/derailedjs/: package.json
shared/derailedjs/src/: client.ts  gateway.ts  http.ts  index.ts  models.ts
vanguard/: README.md  drizzle.config.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
vanguard/app/: globals.css  layout.tsx  page.tsx  previewtrack.tsx
vanguard/app/login/: page.tsx
vanguard/app/register/: page.tsx
vanguard/app/u/[username]/: page.tsx  profile.tsx  trackslist.tsx
vanguard/lib/: database.ts  schema.ts  snowflake.ts  zschema.ts
vanguard/lib/actions/: following.ts
