[project]
name = "derailed-api"
version = "0.1.0"
description = ""
authors = [
    {name = "VincentRPS", email = "vincentbusiness55@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "argon2-cffi>=23.1.0",
    "itsdangerous>=2.1.2",
    "grpcio>=1.59.3",
    "grpcio-tools>=1.59.3",
    "msgspec>=0.18.4",
    "uvicorn[standard]>=0.24.0.post1",
    "redis>=5.0.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

[tool.pdm.scripts]
dev = "uvicorn derailed_api:app --port 14000 --reload"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
