[project]
name = "gateway"
version = "0.0.0"
description = ""
authors = [
    {name = "VincentRPS", email = "vincentbusiness55@gmail.com"},
]
dependencies = [
    "websockets>=12.0",
    "msgspec>=0.18.5",
    "redis>=5.0.1",
    "pydantic>=2.5.2",
    "itsdangerous>=2.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
